--- a/Italbytz.Adapters.Meal.OpenMensa/Italbytz.Adapters.Meal.OpenMensa/Italbytz.Adapters.Meal.OpenMensa.csproj
+++ b/Italbytz.Adapters.Meal.OpenMensa/Italbytz.Adapters.Meal.OpenMensa/Italbytz.Adapters.Meal.OpenMensa.csproj
@@ -1,28 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-    <PackOnBuild>true</PackOnBuild>
-    <PackageVersion>0.1.0</PackageVersion>
-    <Authors>Robin Nunkesser</Authors>
-    <PackageLicenseUrl>https://github.com/Italbytz/nuget-adapters-meal-openmensa/blob/main/LICENSE</PackageLicenseUrl>
-    <Owners>Robin Nunkesser</Owners>
-    <PackageProjectUrl>https://github.com/Italbytz/nuget-adapters-meal-openmensa</PackageProjectUrl>
-    <Description>A set of helpful adapters for mensa plans from OpenMensa.</Description>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <LangVersion>8.0</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <LangVersion>8.0</LangVersion>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Remove="Italbytz.Ports.Common" />
-    <None Remove="Italbytz.Ports.Meal" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Italbytz.Ports.Common" Version="0.2.1" />
-    <PackageReference Include="Italbytz.Ports.Meal" Version="0.2.1" />
-  </ItemGroup>
-
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+		<PackOnBuild>true</PackOnBuild>
+		<PackageVersion>0.1.0</PackageVersion>
+		<Authors>Robin Nunkesser</Authors>
+		<PackageLicenseUrl>https://github.com/Italbytz/nuget-adapters-meal-openmensa/blob/main/LICENSE</PackageLicenseUrl>
+		<Owners>Robin Nunkesser</Owners>
+		<PackageProjectUrl>https://github.com/Italbytz/nuget-adapters-meal-openmensa</PackageProjectUrl>
+		<Description>A set of helpful adapters for mensa plans from OpenMensa.</Description>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+		<LangVersion>8.0</LangVersion>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+		<LangVersion>8.0</LangVersion>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Remove="Italbytz.Ports.Common" />
+		<None Remove="Italbytz.Ports.Meal" />
+		<None Remove="Italbytz.Infrastructure.OpenMensa" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Italbytz.Ports.Meal" Version="0.5.0" />
+		<PackageReference Include="Italbytz.Infrastructure.OpenMensa" Version="0.3.0" />
+	</ItemGroup>
 </Project>
