--- a/Italbytz.Adapters.Meal.OpenMensa/Italbytz.Adapters.Meal.OpenMensa/Italbytz.Adapters.Meal.OpenMensa.csproj
+++ b/Italbytz.Adapters.Meal.OpenMensa/Italbytz.Adapters.Meal.OpenMensa/Italbytz.Adapters.Meal.OpenMensa.csproj
@@ -2,8 +2,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+		<Nullable>enable</Nullable>
 		<PackOnBuild>true</PackOnBuild>
-		<PackageVersion>0.1.0</PackageVersion>
+		<PackageVersion>0.2.0</PackageVersion>
 		<Authors>Robin Nunkesser</Authors>
 		<PackageLicenseUrl>https://github.com/Italbytz/nuget-adapters-meal-openmensa/blob/main/LICENSE</PackageLicenseUrl>
 		<Owners>Robin Nunkesser</Owners>
